objects/APL_Sales_Forecast__c.object
<CustomObject>
    <description>Sales forecast for appliances</description>
    <fields>
        <fullName>CBC2_Code__c</fullName>
        <formula>GPL__r.CBC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Description__c</fullName>
        <formula>GPL__r.CBC2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Level__c</fullName>
        <description>Including 5 CBC2, others and Relay</description>
        <label>CBC2 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CBC2 Level</description>
        <label>CBC2</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>APL Sales Forecasts</relationshipLabel>
        <relationshipName>CBC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_month_10_GAM_forecast__c</fullName>
        <label>Current month - 10 GAM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_10_RSM_forecast__c</fullName>
        <label>Current month - 10 RSM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_10_RSM_price__c</fullName>
        <label>Current month - 10 RSM price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_month_10_RSM_quantity__c</fullName>
        <label>Current month - 10 RSM quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_10_forecast__c</fullName>
        <label>Current month - 10 forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_10_price__c</fullName>
        <label>Current month - 10 price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_10_quantity__c</fullName>
        <label>Current month - 10 quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_GAM_forecast__c</fullName>
        <label>Current month - 11 GAM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_RSM_forecast__c</fullName>
        <label>Current month - 11 RSM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_RSM_price__c</fullName>
        <label>Current month - 11 RSM price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_month_11_RSM_quantity__c</fullName>
        <label>Current month - 11 RSM quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_forecast__c</fullName>
        <label>Current month - 11 forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_price__c</fullName>
        <label>Current month - 11 price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_11_quantity__c</fullName>
        <label>Current month - 11 quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_GAM_forecast__c</fullName>
        <label>Current month - 12 GAM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_RSM_forecast__c</fullName>
        <label>Current month - 12 RSM forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_RSM_price__c</fullName>
        <label>Current month - 12 RSM price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_month_12_RSM_quantity__c</fullName>
        <label>Current month - 12 RSM quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_forecast__c</fullName>
        <label>Current month - 12 forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_price__c</fullName>
        <label>Current month - 12 price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_month_12_quantity__c</fullName>
        <label>Current month - 12 quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>APL Sales Forecasts</relationshipLabel>
        <relationshipName>APL_Sales_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <description>Start date of fiscal month</description>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_YEAR_Quarter__c</fullName>
        <formula>Fiscal_Year__c &amp; &apos;-&apos; &amp;  Fiscal_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal YEAR Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_10000__c</fullName>
        <formula>10000*Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast_10000</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_in_USD__c</fullName>
        <label>Forecast in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GAM_Forecast__c</fullName>
        <label>GAM Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPL_Level__c</fullName>
        <label>GPL Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GPL Level</description>
        <label>GPL</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>APL Sales Forecasts (GPL)</relationshipLabel>
        <relationshipName>GPL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPL_description__c</fullName>
        <formula>GPL__r.GPL_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Forecast__c</fullName>
        <description>Only for type “Account”</description>
        <label>POS Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CDE__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_NAME__c</fullName>
        <label>Product Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Part</description>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>APL Sales Forecasts</relationshipLabel>
        <relationshipName>Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Only for type “Relay”</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_in_USD__c</fullName>
        <description>Only for type “Relay”</description>
        <label>Price in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Only for type “Relay”</description>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Forecast__c</fullName>
        <label>RSM Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Price__c</fullName>
        <label>RSM Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSM_Quantity__c</fullName>
        <label>RSM Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relay_CBC2_Code__c</fullName>
        <label>Relay CBC2 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Relay, GPL, Other CBC2, Part, Account</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Relay</fullName>
                </value>
                <value>
                    <fullName>GPL</fullName>
                </value>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Other CBC2</fullName>
                </value>
                <value>
                    <fullName>Relay Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>APL Sales Forecast</label>
    <nameField>
        <displayFormat>ASF-{000000}</displayFormat>
        <label>APL Sales Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APL Sales Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>